# Owlsome

./: .gitattributes  .gitignore  AGENTS.md  README.md  SECURITY.md  项目书_初稿.md
deployment/systemd/: install_owlsome_services.sh  owlsome-backend.service.example  owlsome-frontend.service.example
docs/: README.md  agent_handoff_guide.md  agent_work_log.md  anyreader_reuse_strategy.md  design_system.md  implementation_overview.md  markdown_cleanup_implementation.md  obsidian_compatibility.md  owlsome_learning_project_proposal.md  pdf_to_markdown_implementation.md  ui_collaboration_guide.md  version_control_strategy.md
docs/demo/: competition_demo_script_5min.md  demo_paths.md
docs/deployment/: campus_server_deployment_guide.md  systemd_service_guide.md
docs/release/: v0_1_release_checklist.md
docs/stage4/: exercise_knowledge_linking_mvp.md  mistake_weakness_loop_mvp.md
docs/test_records/: calculus_content_quality_audit.md  calculus_full_import_report.md  campus_server_deployment_preparation.md  frontend_state_persistence_tests.md  learning_platform_clean_import_stage3_tests.md  retrieval_adapter_tests.md  (+3 more)
learning_platform/: .gitignore  README.md
mineru_tools/: .gitignore  README.md  requirements_web.txt  run.py
mineru_tools/mineru_client/: README.md  __init__.py  client.py  exceptions.py  models.py  pdf_splitter.py  pyproject.toml  rate_limiter.py  requirements.txt  utils.py
owlsome_core/: __init__.py  obsidian.py
text_archiver/: .env.example  .gitignore  README.md  main.py  requirements.txt  sample_input.md  vjf204.md  vjf204_fix.md  vjf204_fix.md.diff
(+57 files in other folders)
