[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mineru-client"
version = "1.0.0"
description = "High-performance Python wrapper for MinerU document parsing API with rate limiting, retry, and large PDF auto-splitting"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MinerU Client Contributors"}
]
keywords = ["mineru", "pdf-parsing", "document-parsing", "ocr", "markdown", "api-wrapper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "urllib3>=1.26",
    "pypdf>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
]
async = [
    "aiohttp>=3.8",
]
all = [
    "mineru-client[dev,async]",
]

[project.urls]
Homepage = "https://mineru.net/apiManage/docs"
Repository = "https://github.com/opendatalab/MinerU"
Documentation = "https://mineru.net/apiManage/docs"
